# Face-Recognition

./: CMakeLists.txt  Prediction results.docx  README.md  bofSift.cpp  bofSift.h  bowMethod.cpp  bowMethod.h  constants.h  descriptor.yml  dictionary.yml  faceDetection.cpp  faceDetection.h  featureDetection.cpp  featureDetection.h  featureDetection_backup.cpp  getSiftKeypoints.cpp  getSiftKeypoints.h  googleAPIcrawler.py  main.cpp  results.yml  tools.cpp  tools.h  ~$ediction results.docx
allFeatures/cropped/: face.csv  rankedFeatures.csv
allFeatures/yale_face_db/: all.yml  allFeatures.csv  bow_test.yml  bow_training.yml  leye_features.csv  mouth_features.csv  names.yml  nose_features.csv  reye_features.csv  (+4 more)
classifiers/: barack_obama.yml  classifier0.xml  francois_hollande.yml  manuel_valls.yml  yaleB20.yml  yaleB21.yml  yaleB22.yml
data/: dictionary.yml  eye_dictionary.yml  eyes_reducer.yml  leye_reducer.yml  mouth_dictionary.yml  mouth_reducer.yml  nose_dictionary.yml  nose_reducer.yml  reye_reducer.yml
stats/: eye_height.csv  eye_width.csv  eye_x.csv  eye_y.csv  eyes.R  mouth_height.csv  mouth_width.csv  mouth_x.csv  mouth_y.csv  nose_height.csv  nose_width.csv  nose_x.csv  nose_y.csv
viz/: all_selected_features.csv  chiSQ.py  eval_pca.py  faceFeatures.py  feature_selection.py  infogain.py  left_eye_selected_features.csv  leye_features.csv  mouth_features.csv  mouth_selected_features.csv  nose_features.csv  nose_selected_features.csv  pca_leye.py  pca_mouth.py  pca_nose.py  pca_reye.py  reye_features.csv  right_eye_selected_features.csv  show_yale_features.py
(+3544 files in other folders)
